-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0
-
windows 7
-
5a110517bb3e2df7aaf66e33ad37b2201ebd62f6
QWidgetBackingStore::flush() crashes for ActiveQt created ActiveX servers. This comes from the fact that backingStore parameter is always null (there seems to be no call in codebase that uses anything else but the default values for this function).
Using "store" member variable instead of "backingStore" parameter gets rid of the crash, and seems to be how it was in Qt4 - probably the bug crept in when the paremeter and member variables were renamed in Qt5.
- is required for
-
QTBUG-24209 Qt 5.0 - Windows: Fix the QtActiveQt module
-
- Closed
-
| For Gerrit Dashboard: QTBUG-25803 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 26517,2 | Fix backingstore crash with QAxWidgets | master | qt/qtbase | Status: MERGED | +2 | 0 |